--- a/Vue电商管理系统/03-登录退出功能.md
+++ b/Vue电商管理系统/03-登录退出功能.md
@@ -218,6 +218,178 @@ html,body,#app{
 
 ### 2.4 绘制默认头像
 
-过程略，！1效果
+过程简单，略。
 
-  ![image-20210106222410957](../img/image-20210106222410957.png)
+效果图:
+
+![image-20210106222410957](../img/image-20210106222410957.png)
+
+### 2.5 绘制登录表单区域
+
+#### 2.5.1 ElementUI的使用
+
+[ElementUI官网](https://element.eleme.cn/#/zh-CN/component/form)
+
+j进入官网，点击组件
+
+![image-20210107145916990](../img/image-20210107145916990.png)
+
+在左侧选择Form表单
+
+![image-20210107145939233](../img/image-20210107145939233.png)
+
+查看代码，并复制最外层的form表单和一个form-item即可。
+
+![image-20210107150004488](../img/image-20210107150004488.png)
+
+>此时浏览器报错：Unknown custom element: <el-form> - did you register the component correctly? For recursive components, make sure to provide the "name" option.
+>
+>我们需要在plugins/element.js中按需导入并注册
+>
+>![image-20210107150320625](../img/image-20210107150320625.png)
+>
+>```js
+>import Vue from 'vue'
+>import { Button, Form, FormItem, Input } from 'element-ui'
+>Vue.use(Button)
+>Vue.use(Form)
+>Vue.use(FormItem)
+>Vue.use(Input)
+>```
+
+#### 2.5.2 绘制带Icon的输入框
+
+复制即可，若想切换icon图标，可选择左侧栏的icon图标，选择图标集合
+
+![image-20210107152135694](../img/image-20210107152135694.png)
+
+![image-20210107152315126](../img/image-20210107152315126.png)
+
+如果不想用官网的图标，可以选择自行选择第三方库的图标，此处以阿里图标库为例，将选好的图标放入购物车，打开右侧的侧边栏，选择下载代码，将压缩包解压至项目中。
+
+![image-20210107153705629](../img/image-20210107153705629.png)
+
+打开demo.html，选择font-class![image-20210107154051554](../img/image-20210107154051554.png)
+
+在main.js导入字体图标
+
+挑选相应图标并获取类名，应用于页面：
+
+```html
+ <el-input prefix-icon="iconfont icon-mima"></el-input>
+```
+
+#### 2.5.3 实现表单的数据绑定
+
+1. 添加data数据对象
+2. 为el-form添加 :model数据绑定form对象 （:model相当于v-bind:model，即绑定属性）
+3. 为每一个表单项使用v-model双向绑定到数据对象的具体项中
+
+```html
+<!-- 登录表单区 -->
+<el-form label-width="0" class="login_form" :model="loginForm">
+    <!-- 用户名 -->
+    <el-form-item>
+        <el-input prefix-icon="iconfont icon-yonghuming" v-model="loginForm.username">			</el-input>
+    </el-form-item>
+    <!-- 密码 -->
+    <el-form-item>
+        <el-input prefix-icon="iconfont icon-mima" v-model="loginForm.password" 				type="password"></el-input>
+    </el-form-item>
+    <!-- 按钮区 -->
+    <el-form-item class="btns">
+        <el-button type="primary">登录</el-button>
+        <el-button type="info">重置</el-button>
+    </el-form-item>
+</el-form>
+```
+
+```js
+data() {
+    return {
+        loginForm: {
+            username: "",
+            password: ""
+        }
+    };
+}
+```
+
+#### 2.5.4 实现表单数据验证
+
+在Form表单中下滑至表单验证，查看其代码
+
+![image-20210107160237593](../img/image-20210107160237593.png)
+
+ElementUI的Form 组件提供了表单验证的功能，只需要通过 `rules` 属性传入约定的验证规则，并将 Form-Item 的 `prop` 属性设置为需校验的字段名即可。
+
+验证规则如下，在data中创建一个rules对象，其中每一个元素为一个数组，每一个数组为一个数据定义验证规则（可定义多个规则），其中数组中的每个对象的属性有：是否必需required、提示信息message、最小长度min、最大长度max、数据类型type、触发事件trigger等。（可选）
+
+![image-20210107160537928](../img/image-20210107160537928.png)
+
+##### 表单验证使用
+
+1. 在data中创建验证规则对象rules
+
+2. 给表单el-form绑定验证规则对象  使用:rules ="rules"
+
+3. 给el-form-item项添加 prop="xxx" ，即表示我们希望使用xxx验证规则验证item里的表单数据项。
+
+   > 注意：
+   >
+   > - xxx，为rules的元素,不需要rules.xxx
+   > - prop不需要加"："，且prop是加在form-item上
+
+```js
+loginRules: {
+    // 验证用户名是否合法
+    username: [
+        {
+            required: true,
+            message: "请输入登录名称",
+            trigger: "blur"
+        },
+        {
+            min: 6,
+            max: 16,
+            message: "用户名长度需为6~16位之间",
+            trigger: "blur"
+        }
+    ],
+        // 验证密码是否合法
+        password: [
+            { required: true, message: "请输入密码", trigger: "blur" },
+            { min: 6, max: 16, message: "密码需要在6~16位之间", trigger: "blur" }
+        ]
+}
+```
+
+#### 2.5.5 表单重置功能
+
+在Form表单页继续往下翻，在Form Methods中存在resetFields方法，此时，我们只需要获取页面中表单，调用其重置方法，即可实现。
+
+![image-20210107163239799](../img/image-20210107163239799.png)
+
+那么如何获取表单呢？
+
+我们给表单加一个引用ref="loginFormRef"，在进行事件监听时，我们可以通过this.$refs.引用名获取引用对象。
+
+于是我们可以总结出实现重置功能的步骤：
+
+1. 在表单中添加引用ref="loginFormRef"
+2. 给重置按钮增加点击监听事件@click="xxx"
+3. 在处理方法中调用this.$refs.loginFormRef.resetFields()
+
+![image-20210107164047994](../img/image-20210107164047994.png)
+
+```js
+  methods: {
+    reset() {
+      // console.log(this);
+      this.$refs.loginFormRef.resetFields();
+    }
+  }
+```
+
+#### 2.5.6 登录前表单数据预验证
+
