--- a/数据结构与算法/数据结构与算法（一） 二叉树遍历和重建二叉树.md
+++ b/数据结构与算法/数据结构与算法（一） 二叉树遍历和重建二叉树.md
@@ -52,7 +52,7 @@ var inorderTraversal = function(root , array = []){
 
 ##### 非递归实现(迭代方法)
 
-初始化一个栈和结果数组，当栈不为空或根节点不为空时，重复下面的步骤：
+初始化一个栈和结果数组，当栈不为空或目标节点不为空时，重复下面的步骤：
 
 1. 根节点和左节点入栈 →直至没有左孩子
 2. 栈顶元素出栈，存入结果数组，将出栈元素作为根节点
@@ -224,11 +224,13 @@ var postorderTraversal = function (root) {
 故我们可以得出以下规律：
 
 1. 从前序遍历中找到根节点root
-2. 在中序遍历中查找root的下标，从该位置截取
+2. 在中序遍历中查找root的位置index，即可获取左右子树的长度
 3. 截取左子树的前序遍历、右子树的前序遍历
 4. 截取左子树的中序遍历、右子树的中序遍历
 5. 递归重建二叉树 分别获得左右子树。
 6. 利用根节点和左右子树即可重建二叉树。
+
+![image-20210107140237965](../img/image-20210107140237965.png)
 
 ```js
 function reConstructBinaryTree(pre, inorder) {
@@ -241,7 +243,7 @@ function reConstructBinaryTree(pre, inorder) {
   const root = pre[0];
   const index = inorder.indexOf(root);
   // 分割前序遍历
-  const preLeft = pre.slice(0, index);
+  const preLeft = pre.slice(1, index+1);
   const preRight = pre.slice(index + 1);
   //分割中序遍历
   const inorderLeft = inorder.slice(0, index);
@@ -301,7 +303,7 @@ function getPostTraversal(pre, vin) {
     }
     const root = pre[0];
     const index = vin.indexOf(root);
-    const preLeft = pre.substring(0, index);
+    const preLeft = pre.substring(1, index+1);
     const preRight = pre.substring(index + 1);
     const vinLeft = vin.substring(0, index);
     const vinRight = vin.substring(index + 1);
