--- a/Vue电商管理系统/03-登录退出功能.md
+++ b/Vue电商管理系统/03-登录退出功能.md
@@ -393,3 +393,122 @@ loginRules: {
 
 #### 2.5.6 登录前表单数据预验证
 
+我们使用Form表单的validate方法对整个表单进行验证，该方法参数为回调函数，其中回调函数又接受两个参数：校验是否成功的bool值，未通过校验字段。
+
+![image-20210107164757713](../img/image-20210107164757713.png)
+
+步骤：
+
+1. 给表单添加引用
+2. 给登录按钮添加点击事件
+3. 在处理函数中调用validate方法，根据其bool值决定请求/不发起请求
+
+#### 2.5.7 配置axios发起登录请求
+
+在main.js中进行全局配置：
+
+1. 导入axios包
+2. 挂载到Vue原型对象上
+3. 设置请求根路径
+
+```js
+import axios from "axios"
+Vue.prototype.$http = axios
+// 配置请求根路径
+axios.defaults.baseURL = "http://127.0.0.1:8888/api/private/v1/"
+```
+
+在监听事件中发起登录请求：
+
+```js
+loginbtn() {
+    this.$refs.loginFormRef.validate(async valid => {
+        if (!valid) return;
+        //post方法返回一个Promise对象 使用async 函数
+        //async表示该函数中有异步操作 await表示后面表达式需要等待结果
+        //使用对象解构 并起别名，此时获得的data数据干净
+        const { data: res } = await this.$http.post("login", this.loginForm);
+        //通过res.meta.status状态码判断请求
+        if (res.meta.status === 200) {
+            return console.log("登陆成功");
+        } else {
+            return console.log("登陆失败");
+        }
+    });
+}
+```
+
+![image-20210107171459193](../img/image-20210107171459193.png)
+
+#### 2.5.8 配置Message全局弹框提示
+
+使用ElementUI中的Message消息提示
+
+使用步骤：
+
+1. 在element.js中导入Message组件
+2. **!!!与其他组件不同，Message组件不是注册，而是挂载到Vue原型对象上**
+3. 在监听事件中调用
+
+```js
+ if (res.meta.status === 200) {
+     return this.$message.success("登陆成功");
+ } else {
+     return this.$message.error("登陆失败！");
+ }
+```
+
+其中调用不同状态方法有两种写法：
+
+```js
+//1、通过对象type传值 
+this.$message({
+     message: '登陆成功',
+     type: 'success'
+ });
+//2、直接调用
+this.$message.success("登陆成功");
+```
+
+#### 2.5.9 完善登陆之后的操作
+
+实现步骤：
+
+1. 将登陆成功之后的token保存至客户端的sessionStorage中
+   -  项目中除了登录之外的其他API接口，必须在登录之后才能访问
+   - token只应在当前网站打开期间生效，所以放在session里而不是local中
+2. 通过路由跳转至后台主页
+
+```js
+window.sessionStorage.setItem("token", res.data.token);
+this.$router.push("/home");
+```
+
+#### 2.5.10 路由导航守卫控制页面访问权限
+
+全局前置守卫，路由跳转前被拦截，如果用户访问登录页，直接放行；否则判断用户是否存在token，若不存在则自动跳转至登录页。
+
+router/index.js
+
+```js
+router.beforeEach((to, form, next) => {
+  if (to.path === '/login') return next();
+  const token = window.sessionStorage.getItem('token');
+  if (!token) return next('/login');
+  next();
+})
+```
+
+#### 2.5.11 退出功能的实现
+
+核心原理：清空token，后续请求不携带token，必须重新登录生成新token后才能访问页面。
+
+给按钮添加点击事件
+
+```js
+logout() {
+    window.sessionStorage.clear();
+    this.$router.push("/login");
+}
+```
+
