--- a/数据结构与算法/数据结构与算法（二） 对称二叉树和二叉树镜像.md
+++ b/数据结构与算法/数据结构与算法（二） 对称二叉树和二叉树镜像.md
@@ -164,6 +164,32 @@ function KthNode(root, k) {
 
 ```
 
+其实我们不需要获取所有的result存起来，只要获取第k个result就好了
+
+```js
+function kNode(node, k) {
+  //非递归.中序
+  const stack = [];
+  let current = node;
+  let sum = 1;
+  while (current || stack.length > 0) {
+    while (current) {
+      stack.push(current);
+      current = current.left;
+    }
+    current = stack.pop();
+    if (sum === k) {
+      return current;
+    } else {
+      sum++;
+    }
+    current = current.right;
+  }
+}
+```
+
+
+
 ### 3.3 二叉搜索树的后序遍历
 
 输入一个整数数组，判断该数组是不是某二叉搜索树的后序遍历的结果。如果是则输出Yes,否则输出No。假设输入的数组的任意两个数字都互不相同。
