Vue电商项目笔记增加

--- a/Vue电商管理系统/04 电商管理系统主页.md
+++ b/Vue电商管理系统/04 电商管理系统主页.md
@@ -328,3 +328,44 @@ data() {
 
 1. data中自定义一个箭头函数
 2. 验证规则中使用该函数
+
+正则表达式复习链接：
+
+### 1.17 渲染修改用户的对话框
+
+将信息填充到对应的表单项中，在修改点击事件中将用户id以参数形式传递出去，并使用请求查询用户信息。
+
+```html
+ <!-- 修改按钮 -->
+            <el-button
+              type="primary"
+              icon="el-icon-edit"
+              size="small"
+              @click="showEditDialog(scope.row.id)"
+            ></el-button>
+```
+
+```js
+async showEditDialog(id) {
+    console.log(id);
+    this.editDialogVisible = true;
+    const { data: res } = await this.$http.get(`users/${id}`);
+    if (res.meta.status !== 200)
+        return this.$message.error("获取用户信息失败");
+    this.editUser = res.data;
+    console.log(res.data);
+}
+```
+
+每次点击修改按钮，表单重置：
+
+给dialog添加close事件，给Form表单添加引用，在事件处理函数中调用表单的reset方法
+
+```js
+  CloseEdit() {
+      this.$refs.editFormRef.resetFields();
+    }
+```
+
+### 1.18 提交修改之前的预验证
+
