--- a/数据结构与算法/数据结构与算法（三） 平衡二叉树及二叉树的经典题型.md
+++ b/数据结构与算法/数据结构与算法（三） 平衡二叉树及二叉树的经典题型.md
@@ -19,6 +19,10 @@
 #### 代码
 
 ```js
+// 1.函数功能：求二叉树是否平衡
+// 2.递归出口：树为空时，平衡；如果不平衡，返回-1
+// 3.等价表达式：
+//    某二叉树平衡 = 左子树平衡 + 右子树平衡 + 左右子树树深<1
 function IsBalanced_Solution(pRoot) {
   return balanced(pRoot) != -1;
 }
@@ -62,7 +66,13 @@ function balanced(node) {
 - 若上述条件均不满足，或已经遍历过，将当前节点出栈，向上回溯
 
 ```js
+// dfs 深度优先遍历
+// 递归减少规模
+// 1.函数功能：计算二叉树中某路径的和 === 给定值
+// 2.递归条件：到达叶子结点：if sum === 给定值，存入
+// 3.等价表达式，减小规模 在每个结点有两条路走，走左节点，走右节点。
 function FindPath(root, expectNumber) {
+    //存储路径结果
     const result = [];
     if (root) {
         FindPathCore(root, expectNumber, [], 0, result);
@@ -71,22 +81,28 @@ function FindPath(root, expectNumber) {
 }
 
 function FindPathCore(node, expectNumber, stack, sum, result) {
+    //记录下当前走的节点
     stack.push(node.val);
     sum += node.val;
     if (!node.left && !node.right && sum === expectNumber) {
         result.push(stack.slice(0));
     }
+    //走左右两个方向
     if (node.left) {
         FindPathCore(node.left, expectNumber, stack, sum, result);
     }
     if (node.right) {
         FindPathCore(node.right, expectNumber, stack, sum, result);
     }
+    //两个方向都走完了，无路可走，回溯。
+  	//此处pop是为了从stack中删除该节点，不要占位置。
     stack.pop();
 }
 ```
 
-### 3 二叉搜索树与双向链表？？？？？
+### 3 二叉搜索树与双向链表
+
+`自己想确实没思路`
 
 #### 题目
 
