增加了数据结构与算法四种的反转链表中非递归代码的注释。

--- a/数据结构与算法/数据结构与算法（四） 链表概述及基本应用.md
+++ b/数据结构与算法/数据结构与算法（四） 链表概述及基本应用.md
@@ -104,16 +104,22 @@ var reverseList = function (head) {
 
 ```js
 var reverseList = function (head) {
-    let currentNode = null;
-    let headNode = head;
-    while (head && head.next) {
-        currentNode = head.next;
-        head.next = currentNode.next;
-        currentNode.next = headNode;
-        headNode = currentNode;
-    }
-    return headNode;
-};
+  let currentNode = null;
+  let headNode = head;
+  while (head && head.next) {
+    //获取基准点的下一个节点 将其作为头节点
+    currentNode = head.next;
+    //基准点的next指向头节点的下一节点，即越过current节点 
+    //防止currentNode.netx丢失，即保留
+    head.next = currentNode.next;
+    //指向之间反转的链表
+    currentNode.next = headNode;
+    //headNode设置为已反转的链表
+    headNode = currentNode;
+  }
+  //返回反转链表
+  return headNode;
+}
 ```
 
 ### 2.3 复杂链表的复制
