修改笔记：数据结构与算法 链表环类题目 约瑟环题解增加

--- a/数据结构与算法/数据结构与算法（五）链表环类题目.md
+++ b/数据结构与算法/数据结构与算法（五）链表环类题目.md
@@ -1,3 +1,5 @@
+
+
 # 链表环类题目
 
 > 环类题目即从判断一个单链表是否存在循环而扩展衍生的问题
@@ -43,6 +45,8 @@ const hasCycle = (head) => {
 };
 
 ```
+
+![image-20210113162858240](../img/image-20210113162858240.png)
 
 ## 2 链表环的入口节点
 
@@ -142,11 +146,29 @@ function EntryNodeOfLoop(pHead) {
 - `f(n) = (f(n-1)+m)%n` 即 `f(n,m) = (f(n-1,m)+m)%n`
 - 使用递归求解 边界条件为 `n=1`
 
-时间复杂度 `1>2>3`
+**解法4**
 
-易理解程度 `1>2>3`
+大体思路：
+
+n个人编号0,1,2,...,n-1，每数m次删掉一个人
+假设有函数f(n)表示n个人最终剩下人的编号
+n个人删掉1个人后可以看做n-1的状态，不过有自己的编号。
+n个人删掉的第一个人的编号是(m-1)%n，那么n个人时删掉第一个人的后面那个人(m-1+1)%n一定是n-1个人时候编号为0的那个人，即n个人时的编号m%n（这个编号是对于n个人来考虑的），n-1个人时编号为i的人就是n个人时(m+i)%n
+所以f(n)=(m+f(n-1))%n
+f(1)=0，因为1个人时只有一个编号0。
+因此可以将人数从2反推到n。
+
+
+
+时间复杂度 `1>2>3>4`
+
+易理解程度 `1>2>3>4`
+
+
 
 ### 代码
+
+**leetcode上超时！**
 
 ```js
 // 解法1
@@ -207,6 +229,8 @@ function LastRemaining_Solution(n, m) {
 }
 ```
 
+![image-20210113172620510](../img/image-20210113172620510.png)
+
 ```  js
 // 解法3
 function LastRemaining_Solution(n, m) {
@@ -227,3 +251,19 @@ function joseoh(n, m) {
     return (joseoh(n - 1, m) + m) % n;
 }
 ```
+
+![image-20210113172656947](../img/image-20210113172656947.png)
+
+```js
+//解法4
+var lastRemaining = function (n, m) {
+  let ans = 0;
+  for (let i = 2; i <= n; i++) {
+    ans = (ans + m) % i;
+  }
+  return ans;
+};
+```
+
+![image-20210113172925825](../img/image-20210113172925825.png)
+
