修改笔记：链表的双指针使用

--- a/数据结构与算法/数据结构与算法（六）链表：双指针、双链表.md
+++ b/数据结构与算法/数据结构与算法（六）链表：双指针、双链表.md
@@ -11,11 +11,27 @@
 
 ### 1.1 两个链表的第一个公共节点
 
+剑指Offer52
+
 #### 题目
 
 输入两个链表，找出它们的第一个公共结点。
 
+**程序尽量满足O(n)时间复杂度，且仅用O(1)内存**
+
+示例 1：
+
+![img](../img/160_example_1.png)
+
+```
+输入：intersectVal = 8, listA = [4,1,8,4,5], listB = [5,0,1,8,4,5], skipA = 2, skipB = 3
+输出：Reference of the node with value = 8
+输入解释：相交节点的值为 8 （注意，如果两个列表相交则不能为 0）。从各自的表头开始算起，链表 A 为 [4,1,8,4,5]，链表 B 为 [5,0,1,8,4,5]。在 A 中，相交节点前有 2 个节点；在 B 中，相交节点前有 3 个节点。
+```
+
 #### 思路
+
+快慢指针法
 
 - 1.先找到两个链表的长度`length1`、`length2`
 - 2.让长一点的链表先走`length2-length1`步，让长链表和短链表起点相同
@@ -27,48 +43,59 @@
 #### 代码
 
 ```js
-function FindFirstCommonNode(pHead1, pHead2) {
-      if (!pHead1 || !pHead2) { return null; }
-      // 获取链表长度
-      let length1 = getLength(pHead1);
-      let length2 = getLength(pHead2);
-      // 长链表先行
-      let lang, short, interval;
-      if (length1 > length2) {
-        lang = pHead1;
-        short = pHead2;
-        interval = length1 - length2;
-      } else {
-        lang = pHead2;
-        short = pHead1;
-        interval = length2 - length1;
-      }
-      while (interval--) {
-        lang = lang.next;
-      }
-      // 找相同节点
-      while (lang) {
-        if (lang === short) {
-          return lang;
-        }
-        lang = lang.next;
-        short = short.next;
-      }
-      return null;
-    }
+var getIntersectionNode = function (headA, headB) {
+  if (!headA || !headB) return null;
+  var lengthA = getLength(headA);
+  var lengthB = getLength(headB);
+  var long, short, distance;
+  if (lengthA > lengthB) {
+    long = headA;
+    short = headB;
+    distance = lengthA - lengthB;
+  } else {
+    long = headB;
+    short = headA;
+    distance = lengthB - lengthA;
+  }
 
-    function getLength(head) {
-      let current = head;
-      let result = 0;
-      while (current) {
-        result++;
-        current = current.next;
-      }
-      return result;
+  // 长的移动位置
+  while (distance--) {
+    long = long.next;
+  }
+
+  //一起走
+  while (long && short) {
+    if (long === short) {
+      return long;
     }
+    long = long.next;
+    short = short.next;
+  }
+  return null;
+};
+
+function getLength(head) {
+  let count = 0;
+  let current = head;
+  while (current) {
+    count++;
+    current = current.next;
+  }
+  return count;
+}
 ```
 
+![image-20210114140418738](../img/image-20210114140418738.png)
+
 ### 1.2 链表倒数第k个节点
+
+Offer22
+
+#### 题目
+
+输入一个链表，输出该链表中倒数第k个节点。为了符合大多数人的习惯，本题从1开始计数，即链表的尾节点是倒数第1个节点。例如，一个链表有6个节点，从头节点开始，它们的值依次是1、2、3、4、5、6。这个链表的倒数第3个节点是值为4的节点。
+
+#### 思路
 
 简单思路： 循环到链表末尾找到 length 在找到length-k节点 需要循环两次。
 
@@ -78,31 +105,37 @@ function FindFirstCommonNode(pHead1, pHead2) {
 
 前面的节点到达k后，后面的节点才出发。
 
-代码鲁棒性： 需要考虑head为null，k为0，k大于链表长度的情况。
+特判： 需要考虑head为null，k为0，k大于链表长度的情况。
 
 #### 代码
 
 ```js
-function FindKthToTail(head, k) {
-    //如果链表为空 或 k=0
-    if (!head || !k) return null;
-    let front = head;
-    let behind = head;
-    //记录链表长度
-    let index = 1;
-    while (front.next) {
-        index++;
-        front = front.next;
-        //如果前面指针走过长度>k 后面指针开始移动
-        if (index > k) {
-            behind = behind.next;
-        }
+var getKthFromEnd = function (head, k) {
+  //如果链表为空 或 k=0
+  if (!head || !k) return null;
+  var front = head;
+  var behind = head;
+  //记录链表长度
+  var index = 1;
+  while (front.next) {
+    index++;
+    front = front.next;
+	//如果前面指针走过长度>k 后面指针开始移动
+    if (index > k) {
+      behind = behind.next;
     }
-    return (k <= index) && behind;
-}
+  }
+  return (index >= k) && behind;
+
+};
+
 ```
 
+![image-20210114142400778](../img/image-20210114142400778.png)
+
 ### 1.3 相交链表
+
+leetcode 160
 
 #### 题目
 
@@ -193,6 +226,8 @@ var getIntersectionNode = function (headA, headB) {
 };
 ```
 
+![image-20210114144103040](../img/image-20210114144103040.png)
+
 ##### 2.哈希表
 
 ```js
@@ -216,6 +251,8 @@ var getIntersectionNode = function (headA, headB) {
 }
 ```
 
+![image-20210114144240253](../img/image-20210114144240253.png)
+
 ##### 3.双指针
 
 ```js
@@ -233,6 +270,57 @@ var getIntersectionNode = function (headA, headB) {
   return pA;
 }
 ```
+
+![image-20210114142925484](../img/image-20210114142925484.png)
+
+快慢指针法（两个链表的第一个公共节点的方法）
+
+```js
+var getIntersectionNode = function (headA, headB) {
+  if (!headA || !headB) return null;
+  var lengthA = getLength(headA);
+  var lengthB = getLength(headB);
+  var long, short, distance;
+  if (lengthA > lengthB) {
+    long = headA;
+    short = headB;
+    distance = lengthA - lengthB;
+  } else {
+    long = headB;
+    short = headA;
+    distance = lengthB - lengthA;
+  }
+
+  // 长的移动位置
+  while (distance--) {
+    long = long.next;
+  }
+
+  //一起走
+  while (long && short) {
+    if (long === short) {
+      return long;
+    }
+    long = long.next;
+    short = short.next;
+  }
+  return null;
+};
+
+function getLength(head) {
+  let count = 0;
+  let current = head;
+  while (current) {
+    count++;
+    current = current.next;
+  }
+  return count;
+}
+```
+
+
+
+![image-20210114142825887](../img/image-20210114142825887.png)
 
 
 
