--- a/Vue电商管理系统项目/07 参数管理.md
+++ b/Vue电商管理系统项目/07 参数管理.md
@@ -73,3 +73,64 @@ else this.onlyTableData = res.data;
 ```
 
 使用Table表格渲染数据，略
+
+### 5.3 渲染参数下的可选性。
+
+![image-20210114173511344](../img/image-20210114173511344.png)
+
+获取参数数据时，将attr_vals从字符串转数组。
+
+**注意：需要对其是否为空进行判断，如果空直接返回空数组。不然会导致空字符串转化成【“”】的结果**
+
+```js
+//将attr_val从字符串变为数组
+res.data.forEach(item => {
+    item.attr_vals = item.attr_vals ? item.attr_vals.split(",") : [];
+});
+```
+
+```html
+ <!-- 展开行 -->
+<el-table-column type="expand">
+    <template v-slot="scope">
+        <el-tag v-for="(item,i) in scope.row.attr_vals" :key="i" closable>{{item}}</el-tag>
+    </template>
+</el-table-column>
+```
+
+### 5.4 可选性的添加按钮
+
+使用Tag里面的动态编辑标签
+
+![image-20210114180232250](../img/image-20210114180232250.png)
+
+完成以上功能后，发现多个参数的输入框联动改变，原因在于共用一个inputvalue
+
+![image-20210114180508076](../img/image-20210114180508076.png)
+
+**改进**
+
+在获取参数列表书，给其添加inputValue属性
+
+```js
+//将attr_val从字符串变为数组
+res.data.forEach(item => {
+    //控制文本框的显示与隐藏
+    item.inputVisible = false;
+    item.inputValue = "";
+    item.attr_vals = item.attr_vals ? item.attr_vals.split(",") : [];
+});
+```
+
+**让文本框获得焦点**
+
+```js
+showInput(row) {
+    row.inputVisible = true;
+    this.$nextTick(_ => {
+        this.$refs.saveTagInput.$refs.input.focus();
+    });
+}
+```
+
+this.$nextTick当页面元素被重新渲染时，执行回调函数的代码。 
