增加Vue项目笔记

--- a/Vue电商管理系统项目/07 参数管理.md
+++ b/Vue电商管理系统项目/07 参数管理.md
@@ -2,7 +2,7 @@
 
 ## 1 参数管理概念
 
-![image-20210113211620308](E:%5CStudy%5CFront-end%5C%E7%AC%94%E8%AE%B0%5Cnote%5Cimg%5Cimage-20210113211620308.png)
+![image-20210113211620308](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210113211620308.png)
 
 ## 2 基本UI布局
 
@@ -14,7 +14,7 @@
 
 ## 4 Tab标签页的使用
 
-![image-20210113215134858](../img/image-20210113215134858.png)
+![image-20210113215134858](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210113220051120.png)
 
 ```html
 <!-- 标签页 -->
@@ -33,7 +33,7 @@ activeName: "first"
 
 ### 禁用按钮
 
-![image-20210113220051120](../img/image-20210113220051120.png)
+![image-20210113220051120](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210113215134858.png)
 
 使用计算属性，当selectKeys长度>0时，btn disabled false。
 
@@ -76,7 +76,7 @@ else this.onlyTableData = res.data;
 
 ### 5.3 渲染参数下的可选性。
 
-![image-20210114173511344](../img/image-20210114173511344.png)
+![image-20210114173511344](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210114180232250.png)
 
 获取参数数据时，将attr_vals从字符串转数组。
 
@@ -102,11 +102,11 @@ res.data.forEach(item => {
 
 使用Tag里面的动态编辑标签
 
-![image-20210114180232250](../img/image-20210114180232250.png)
+![image-20210114180232250](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210114173511344.png)
 
 完成以上功能后，发现多个参数的输入框联动改变，原因在于共用一个inputvalue
 
-![image-20210114180508076](../img/image-20210114180508076.png)
+![image-20210114180508076](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210114180508076.png)
 
 **改进**
 
