数据结构与算法笔记修改

--- a/数据结构与算法/二叉树篇/【1】 二叉树前言.md
+++ b/数据结构与算法/二叉树篇/【1】 二叉树前言.md
@@ -4,7 +4,7 @@
 
 树是用来模拟具有树状结构性质的数据集合。根据它的特性可以分为非常多的种类，对于我们来讲，掌握二叉树这种结构就足够了，它也是树最简单、应用最广泛的种类。
 
-> 二叉树是一种典型的树树状结构。如它名字所描述的那样，二叉树是每个节点最多有两个子树的树结构，通常子树被称作“左子树”和“右子树”。
+> 二叉树是一种典型的树状结构。如它名字所描述的那样，二叉树是每个节点最多有两个子树的树结构，通常子树被称作“左子树”和“右子树”。
 
 ## 二叉树遍历★★★★★
 
