Vue项目完成笔记以及二叉树数据结构与算法笔记

--- a/Vue电商管理系统项目/10-项目优化上线.md
+++ b/Vue电商管理系统项目/10-项目优化上线.md
@@ -362,8 +362,44 @@ node app.js
 
 ① 进入 https://freessl.cn/ 官网，输入要申请的域名并选择品牌。 
 
+![image-20210117145054234](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210117145054234.png)
+
+![image-20210117145006737](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210117145006737.png)
+
 ② 输入自己的邮箱并选择相关选项。
 
 ③ 验证 DNS（在域名管理后台添加 TXT 记录）。
 
 ④ 验证通过之后，下载 SSL 证书（ full_chain.pem 公钥；private.key 私钥）。
+
+
+
+**在后台项目中导入证书**
+
+把下载下来的full_chain.pem 公钥；private.key 私钥粘贴到文件根目录中
+
+```js
+ const https = require('https');
+ const fs = require('fs');
+ const options = {
+     cert: fs.readFileSync('./full_chain.pem'),
+     key: fs.readFileSync('./private.key')
+ }
+ https.createServer(options, app).listen(443);
+```
+
+### 2.4 使用pm2管理应用
+
+① 在服务器中安装 pm2：npm i pm2 -g  全局安装
+
+② 启动项目：pm2 start 脚本 --name 自定义名称
+
+③ 查看运行项目：pm2 ls 
+
+④ 重启项目：pm2 restart 自定义名称
+
+⑤ 停止项目：pm2 stop 自定义名称
+
+⑥ 删除项目：pm2 delete 自定义名称
+
+![image-20210117164400783](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210117164400783.png)
