--- a/Vue电商管理系统项目/项目总结.md
+++ b/Vue电商管理系统项目/项目总结.md
@@ -6,7 +6,7 @@
 
 📖[开发全过程博客记录](https://blog.csdn.net/weixin_43786756/category_10716603.html)
 
-🐱 [GitHub笔记]()
+🐱 [GitHub笔记](https://github.com/ruoruochen/front-end-note/tree/master/Vue%E7%94%B5%E5%95%86%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F%E9%A1%B9%E7%9B%AE)
 
 ### 项目使用指南：
 
