--- a/JavaScript/数组、字符串常用函数掌握.md
+++ b/JavaScript/数组、字符串常用函数掌握.md
@@ -318,7 +318,7 @@ var n = str.substr(2, 3)
 console.log(n);//llo
 ```
 
-#### replace函数
+#### replace函数(不改变原始数组，返回一个替换数组)
 
 **作用：**在字符串中用一些字符替换另一些字符，或替换一个与正则表达式匹配的子串。
 
