输入网址到网页显示的过程是什么修改

--- a/面试题/前端面试真题/腾讯面试真题1.md
+++ b/面试题/前端面试真题/腾讯面试真题1.md
@@ -23,20 +23,34 @@
 2.缓存查找
 3.DNS解析
 4.TCP连接，三次握手
-5.服务器响应，浏览器解析。
-6.浏览器渲染
-7.TCP连接断开，4次挥手
+5.http请求
+6.服务器响应，浏览器解析。
+7.浏览器渲染
+8.TCP连接断开，4次挥手
 ```
 
 从用户输入一个网址到网页最终展现，中间的大致流程如下：
 
-（1）首先浏览器会对 URL 进行解析，分析所需要使用的传输协议和请求的资源的路径。如果输入的 URL 中的协议或者主机名不合法，将会把地址栏中输入的内容传递给搜索引擎。如果没有问题，浏览器会检查 URL 中是否出现了非法字符，如果存在非法字符，则对非法字符进行转义后再进行下一过程。
+（1）首先浏览器会对 URL 进行解析，分析所需要使用的传输协议和请求的资源的路径。如果URL的协议或者主机名不合法，将会把地址栏中输入的内容传递给搜索引擎。如果没有问题，浏览器会检查 URL 中是否出现了非法字符，如果存在非法字符，则对非法字符进行转义后再进行下一过程。
 
 （2）浏览器会进行缓存查找。判断请求资源是否在缓存里，如果请在并且没有失效，那么就直接使用，否则向服务器发起新的请求。
 
-（3）进行DNS解析，获取URL中域名的 IP 地址，首先会判断本地是否有该域名的 IP 地址的缓存，如果有则使用，如果没有**本地 DNS 服务器**向**根域名服务器**发起请求，获得负责的顶级域名服务器的地址后，再向**顶级域名服务器**请求，然后获得负责的权威域名服务器的地址后，再向**权威域名服务器**发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将这个 IP 地址返回给请求的用户。用户向本地DNS服务器发起请求属于递归请求，本地DNS服务器向各级域名服务器发起请求属于迭代请求。
+（3）进行DNS解析，获取URL中域名的 IP 地址，首先会判断本地是否有该域名的 IP 地址的缓存，如果有则使用，如果没有**本地 DNS 服务器**向**根域名服务器**发起请求，获得负责的顶级域名服务器的地址后，再向**顶级域名服务器**请求，然后获得负责的权威域名服务器的地址后，再向**权威域名服务器**发起请求，最终获得域名的 IP 地址后，本地 DNS 服务器再将这个 IP 地址返回给请求的用户。用户向本地DNS服务器发起请求属于递归请求（本地服务器会帮主机进行DNS查询，这一步对主机是透明的。因此是属于递归），本地DNS服务器向各级域名服务器发起请求属于迭代请求。（迭代的查询IP）
 
-（4）我们通过DNS解析获取到了网址所对应的IP地址后， 需要发起TCP连接请求。 TCP 建立连接需要经历三次握手的过程，首先客户端向服务器发送一个 SYN 连接请求报文段和一个随机序号，服务端接收到请求后向服务器端发送一个 SYN ACK报文段，确认连接请求，并且也向客户端发送一个随机序号。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个 ACK 确认报文段，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/169b3a2a6dfe85ec)
+
+（4）我们通过DNS解析获取到IP地址后， 需要发起TCP连接请求。 TCP 建立连接需要经历三次握手的过程，首先客户端向服务器发送一个 **SYN 连接请求报文段**和一个随机序号，服务端接收到请求后向客户端发送一个 **SYN ACK报文段**和一个随机序号，确认连接请求。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个 **ACK 确认报文段**，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
+
+```
+在TCP报文的报头中，有几个标志字段：
+1、 SYN：同步连接序号，TCP SYN报文就是把这个标志设置为1，来请求建立连接；
+2、 ACK：请求/应答状态。0为请求，1为应答；
+3、 FIN：结束连线。如果FIN为0是结束连线请求，FIN为1表示结束连线；
+```
+
+
+
+![三次握手.png](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16da9fd28a45bd19)
 
 （5）握手成功后， 浏览器就可以向服务器发送**http**请求了。 **发送HTTP请求的过程就是构建HTTP请求报文并通过TCP协议发送到服务器指定端口(HTTP协议80/8080, HTTPS协议443)**。HTTP请求报文是由三部分组成: 请求行,请求报头和请求正文。
 
@@ -44,16 +58,22 @@
 
 （7）浏览器首先会根据 html 文件构建 DOM 树，根据解析到的 css 文件构建 CSSOM 树。当 DOM 树和 CSSOM 树建立好后，根据它们来构建渲染树。渲染树构建好后，会根据渲染树来进行布局，计算每个节点的几何位置。布局完成后，进入绘制阶段，将各个节点绘制到屏幕上。这个时候整个页面就显示出来了。
 
-（8）最后一步是 TCP 断开连接的四次挥手过程。4次挥手大体的过程如下：
-1. 浏览器端发消息通知服务器现在需要断开（第一次挥手）
-2. 服务器接到要断开的请求之后，给浏览器返回消息，告诉浏览器我正在准备释放（第二次挥手）
-3. 此时浏览器接到消息后正在等待服务器释放完成，而服务器正在准备释放的过程
-4. 当服务器释放完成后，再通知浏览器我已经释放完成了。（第三次挥手）
-5. 浏览器接收到服务器释放完成的消息后，再给服务器发送消息告诉服务器我已经知道你释放完成了，服务器收到消息后，就能确认自己释放完成的消息已经通知到了（第四次挥手）
+（8）最后一步是 断开 TCP连接，需要经历四次挥手过程。
 
-**DNS 解析过程图**
+4次挥手大体的过程如下：
 
-![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/169b3a2a6dfe85ec)
+1. 客户端向服务器发送一个**FIN连接释放报文段**和一个随机序号，通知服务器现在需要断开（第一次挥手）
+2. 服务器接到要断开的请求之后，向客户端发送一个**ACK确认报文段**和一个随机序号，服务端进入CLOSE_WAIT（关闭等待）状态（第二次挥手）
+4. 如果服务端也想断开连接了，向客户端发送一个**FIN连接释放报文段**和一个随机序号（第三次挥手）
+5. 客户端接收到服务器消息后，向服务器端发送一个**ACK确认报文段**和一个随机序号，服务器收到消息后，就处于关闭连接了，处于 `CLOSED` 状态（第四次挥手）
+
+![image.png](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/16da9fd28b49f652)
+
+```
+一般来说， ACK 报文的序列号值为对方序列号值+1
+```
+
+
 
 参考资料：
 
@@ -67,7 +87,7 @@
 
 ```
 Q:说一说三次握手
-三次握手（Three-way Handshake）其实就是指建立一个TCP连接时，需要客户端和服务器总共发送3个包。进行三次握手的主要作用就是为了确认双方的接收能力和发送能力是否正常、指定自己的初始化序列号为后面的可靠性传送做准备。实质上其实就是连接服务器指定端口，建立TCP连接，并同步连接双方的序列号和确认号，交换TCP窗口大小信息。
+三次握手（Three-way Handshake）其实就是指建立一个TCP连接时，需要客户端和服务器总共发送3个包。进行三次握手的主要作用就是为了确认双方的接收能力和发送能力是否正常、指定自己的初始化序列号为后面的可靠性传送做准备。
 
 Q:为什么需要三次握手，两次不行吗？
 弄清这个问题，我们需要先弄明白三次握手的目的是什么，能不能只用两次握手来达到同样的目的。
@@ -83,6 +103,6 @@ Q:为什么需要三次握手，两次不行吗？
 
 
 Q:挥手为什么要4次？
-因为当服务端收到客户端的SYN连接请求报文后，可以直接发送SYN+ACK报文。其中ACK报文是用来应答的，SYN报文是用来同步的。但是关闭连接时，当服务端收到FIN报文时，很可能并不会立即关闭SOCKET，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此不能一起发送。故需要四次挥手。
+关闭连接时，当服务端收到FIN报文时，很可能并不会立即关闭SOCKET，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此不能一起发送。故需要四次挥手。
 ```
 
