添加4道高频考点题目

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -90,3 +90,144 @@ Q:挥手为什么要4次？
 
 ### 2.CSS为什么要清除浮动？如何清除浮动？
 
+由于父级盒子很多情况下，不方便给高度，但是子盒子浮动又不占有位置，最后父级盒子高度为 0 时，就会影响下面的标准流盒子。清除浮动的本质是清除浮动元素造成的影响，清除浮动之后，父级就会根据浮动的子盒子自动检测高度。父级有了高度，就不会影响下面的标准流了。
+
+清除浮动的方法有：
+
+**1.clear:both;**
+
+在浮动元素末尾添加一个空的标签，**这个标签必须为块级元素**。然后将其设置clear:both,这样就可以清除浮动。
+
+**优点：**简单易懂，方便。
+
+**缺点：**添加了无意义的冗余元素，结构化差。
+
+```html
+<div class="box">
+    <div class="inner"></div>
+    <div class="inner"></div>
+    <div class="inner"></div>
+    <div style="clear:both"></div>
+</div>
+```
+
+**2.伪元素清除浮动**
+
+给父元素添加一个before或after伪元素，然后设置伪元素的样式，这是通用的清理浮动方案。
+
+**优点：**没有增加标签，结构更简单
+
+**缺点：**没有照顾低版本浏览器
+
+```css
+.clearfix:after { 
+ content: ""; 
+ display: block; 
+ height: 0; 
+ clear: both; 
+ visibility: hidden; 
+} 
+.clearfix { /* IE6、7 专有 */ 
+ *zoom: 1;
+}
+```
+
+**3.给父元素使用overflow:hidden;**
+
+让父容器形成了BFC（块级格式上下文），而BFC可以包含浮动，父元素的高度计算会包括浮动元素的高度。
+
+### 3. BFC是什么，怎么样形成BFC，BFC有什么作用？
+
+BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页面**中**盒模型布局**的**CSS渲染模式**，是一个隔离的独立容器。 
+
+**怎样形成一个BFC？** 
+
+由以下之一创建：
+
+- 浮动：float元素除了none以外。
+
+- 绝对定位的元素
+
+- 非块级元素具有 display: inline-block，table-cell,flex等。
+
+  块级元素具有overflow ，且值不是 **visible**
+
+**BFC用处**
+
+1. 清除浮动，给父元素添加overflow:hidden。因为计算BFC的高度时，浮动元素也参与计算。
+2. 用于两栏自适应布局
+3. 防止垂直margin合并
+
+### 4.如何实现水平居中
+
+#### 行内元素
+
+1.首先看它的父元素是不是块级元素，如果是，则直接给父元素设置 **text-align: center;** 
+
+2.如果不是，则先将其父元素设置为块级元素，再给父元素设置 **text-align: center;**
+
+#### 块级元素
+
+**方法1：margin**
+
+1.如果盒子**宽度给定**，给其设置`margin: 0 auto;`（作用：使盒子自己居中）
+
+2.如果盒子**不定宽度**，则子元素的宽度默认与父元素一样宽。这时需要设置子元素为`display: inline-block;` 或`display: inline;`即将其转换成行内块级/行内元素，给父元素设置 `text-align: center;`
+
+**方法2：定位**
+
+首先设置父元素为相对定位，再设置子元素为绝对定位，设置子元素的**left:50%**，即让子元素的左上角水平居中，再分情况：
+
+1.盒子**定宽度**，设置绝对子元素的 `margin-left: -元素宽度的一半px;`或者设置`transform: translateX(-50%);`
+
+2.盒子**不定宽度：**利用css3新增属性`transform: translateX(-50%);`
+
+**方法3：用flex布局**
+
+使用flex布局，只需要给待处理的块状元素的父元素添加属性`display: flex; justify-content: center;`
+
+### 5.如何实现盒子垂直居中
+
+#### 单行的行内元素
+
+只需要设置单行行内元素`line-height: 父盒子高度px;`
+
+#### 多行的行内元素
+
+使用给父元素设置`display:table-cell;`和`vertical-align: middle;`属即可；
+
+```
+父元素变成表格单元格，设置多行文字垂直居中
+```
+
+#### 块级元素
+
+**方法1：定位**
+
+首先设置父元素为相对定位，再设置子元素为绝对定位，设置子元素的**top: 50%**，即让子元素的左上角垂直居中；
+
+1.盒子**定高度**：设置绝对子元素的 `margin-top: -元素高度的一半px;` 或者设置`transform: translateY(-50%);`
+
+2.盒子**不定高度：**利用css3新增属性**transform: translateY(-50%);**
+
+**方法2：flex布局**
+
+使用flexbox布局，只需要给待处理的块状元素的父元素添加属性`display: flex; align-items: center;`
+
+### 6.如何实现水平垂直居中
+
+#### 已知高度和宽度的元素
+
+**方案一：**设置父元素为相对定位，给子元素设置绝对定位，`top: 0; right: 0; bottom: 0; left: 0; margin: auto;`
+
+**方案二：**设置父元素为相对定位，给子元素设置绝对定位，`left: 50%; top: 50%; margin-left: -元素宽度的一半px; margin-top: -元素高度的一半px;`
+
+#### 未知高度和宽度的元素
+
+**方案一：**使用定位属性
+
+设置父元素为相对定位，给子元素设置绝对定位，**left: 50%; top: 50%; transform: translateX(-50%) translateY(-50%);**
+
+**方案二：**使用flex布局实现
+
+设置父元素为flex定位，**justify-content: center; align-items: center;**
